--- a/report/sample.tex
+++ b/report/sample.tex
@@ -686,7 +686,7 @@ against all other TCP variants. It is perhaps the algorithm that is most sensiti
 The most aggressive algorithms are BIC, Westwood, Illinois, and Scalable. Of these four, Westwood is the most
 greedy, taking nearly all available bandwidth for itself. It is perhaps the most incensitive to congestion on the network.
 
-The congestion control algorithms capapble of equally sharing bandwidth are Hybla, LP, Cubic, YeAH, and Reno.
+The congestion control algorithms capable of equally sharing bandwidth are Hybla, LP, Cubic, YeAH, and Reno.
 Each of these algorithms share the available bandwidth more or less equally with each of the other four. This is demonstrated by Figures \ref{fig:hybla_lp}, \ref{fig:hybla_reno}, \ref{fig:hybla_yeah}, \ref{fig:hybla_cubic}, \ref{fig:reno_lp}, \ref{fig:lp_yeah}, \ref{fig:lp_cubic}, \ref{fig:reno_yeah}, \ref{fig:reno_cubic}, and \ref{fig:cubic_yeah}.
 
 Given some guidance, students should be able to figure out how TCP congestion control is implemented in the Linux kernel and successfully conduct experiments of their own.
